Implement Safe Conditional Procedure Calls and Returns
This commit fixes a logical error where a conditional instruction preceding a CALL or RET only affected the first machine instruction of the generated marshalling sequence.

The changes ensure that the entire marshalling sequence for a CALL or RET is treated as an atomic operation when preceded by a conditional instruction. This is achieved by transforming the conditional instruction and the CALL/RET into a sequence that uses a negated conditional jump to skip the entire block.

- Created `ConditionalUtils.java` to manage conditional opcodes and their negations.
- Updated `CallerMarshallingRule.java` to handle conditional CALLs by emitting a negated jump over the marshalling sequence.
- Updated `ProcedureMarshallingRule.java` to handle conditional RETs by emitting a negated jump over the epilogue.
- Added new unit tests to `EmissionCallerMarshallingTest.java` and `EmissionProcedureMarshallingTest.java` to verify the new logic.
- All existing tests pass, ensuring no regressions were introduced.